--- a/app/treasuryui/webapp_old/view/App.view.xml
+++ b/app/treasuryui/webapp_old/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="treasuryui.controller.App"
+<mvc:View controllerName="treasuryuiFA.controller.App"
     displayBlock="true"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
