--- a/app/treasuryui/webapp_old/view/TreasuryMainView.view.xml
+++ b/app/treasuryui/webapp_old/view/TreasuryMainView.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="treasuryui.controller.TreasuryMainView"
+<mvc:View controllerName="treasuryuiFA.controller.TreasuryMainView"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
